--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,127 @@ ul{
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
 }
+.modal-text{
+
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 23px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        
+        
+        color: #212121;
+}
+textarea{
+        resize: none;
+}
+.form{
+        margin-left:auto;
+        margin-right: auto;
+        padding: 40px;
+}
+.form-field{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 28px;
+        text-align: left;
+        
+
+}
+.form-label{
+        display: flex;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.01em;
+        
+        color: #757575;
+        align-items: flex-start;
+}
+.icon-person{
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-block;
+        
+}
+.form-input{
+
+        width: 448px;
+        height: 40px;
+
+        
+        border: 1px solid #2196F3;
+        border-radius: 4px;
+        
+}
+.form-comment{
+        width: 448px;
+        height: 120px;
+
+        padding: 12px 16px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;      
+}
+.form-field-coment{
+
+
+        margin-bottom: 0;
+}
+
+.form-field-checkbox{
+        display: block;
+        text-align: left;
+        
+        height: 24px;
+        margin-top: 20px;
+        align-items: center;
+        text-align: center;
+        
+}
+.form-label-checkbox{
+        font-size: 14px;
+        line-height: 24px;
+               
+        letter-spacing: 0.03em;
+        
+        color: #757575;
+}
+.terms:hover, .terms:focus{
+        text-decoration:underline;
+        color:#2196F3 ;
+}
+
+.form-input-checkbox{
+        width: 16px;
+        height: 15px;
+        background: #212121;
+}
+.font-field input::placeholder{
+        
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.01em;
+        
+        color: rgba(117, 117, 117, 0.5);
+}
+.button-modal{
+        width: 200px;
+        height: 50px;
+
+        margin-top: 20px;
+        background: #2196F3;
+        
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 30px;
+         
+        letter-spacing: 0.06em;
+        color: #FFFFFF;
+}
 .close{
         display: flex;
         align-items: center;
