--- a/css/styles.css
+++ b/css/styles.css
@@ -276,48 +276,64 @@ textarea{
         resize: none;
 }
 .form{
-        margin-left:auto;
-        margin-right: auto;
+        
         padding: 40px;
 }
 .form-field{
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 28px;
-        text-align: left;
+        display: block;
         position: relative;
+        margin-bottom: 10px;
+        margin-top: 4px;
+        text-align: left;
         
-
 }
 .form-label{
-        position: relative;
+        
         display: flex;
         font-weight: 400;
         font-size: 12px;
         line-height: 14px;
         letter-spacing: 0.01em;
-        
+        margin-top: 4px;
         color: #757575;
         align-items: flex-start;
 }
 .icon-person{
         position: absolute;
-        width: 100%;
-        top: 25%;
-        left: 12px;
-        display: inline-block;
-        transform: translateY(100%);
+        width: 18px;
+        height: 18px;
+        top: 50%;
+        left: 15px;
         
+        transform: translateY(-50%);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+        fill: #212121;
+}
+.form-input:focus{
+        outline: none;
+        border-color: #2196F3;        
+}
+.form-input:focus + .icon-person{
+
+        fill: #2196F3;
 }
 .form-input{
         
-        width: 448px;
-        height: 40px;
+        width: 100%;
+        
+        
+        padding-top: 14px;
+        padding-bottom: 14px;
+        padding-left:42px ;
+        
 
         
-        border: 1px solid #2196F3;
+        border: 1px solid var(--main-secon-color);
         border-radius: 4px;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
+
+
 }
 .form-comment{
         width: 448px;
