--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,7 @@ textarea{
         position: relative;
         margin-bottom: 10px;
         margin-top: 4px;
-        text-align: left;
+        
         
 }
 .form-label{
@@ -304,18 +304,18 @@ textarea{
         height: 18px;
         top: 50%;
         left: 15px;
-        
+        color:#212121;
         transform: translateY(-50%);
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
-        fill: #212121;
+        fill:currentColor;
 }
 .form-input:focus{
         outline: none;
         border-color: #2196F3;        
 }
-.form-input:focus + .icon-person{
-
-        fill: #2196F3;
+.form-input:focus ~ .icon-person{
+        color: #2196F3;
+        fill:currentColor;
 }
 .form-input{
         
@@ -331,24 +331,25 @@ textarea{
         border: 1px solid var(--main-secon-color);
         border-radius: 4px;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
+        fill: currentColor;
 
 
 }
 .form-comment{
         width: 448px;
         height: 120px;
-
+        outline: none;
         padding: 12px 16px;
         border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;      
 }
 .form-field-coment{
-
-
         margin-bottom: 0;
 }
-
+.form-input-checkbox{
+        -moz-appearance: none;
+        position: absolute;
+}
 .form-field-checkbox{
         display: block;
         text-align: left;
@@ -367,16 +368,13 @@ textarea{
         
         color: #757575;
 }
-.terms:hover, .terms:focus{
+
+.terms{
         text-decoration:underline;
         color:#2196F3 ;
 }
 
-.form-input-checkbox{
-        width: 16px;
-        height: 15px;
-        background: #212121;
-}
+
 .font-field input::placeholder{
         
         font-weight: 400;
@@ -416,8 +414,15 @@ textarea{
         border-radius: 50%;
         background: #FFFFFF;
         cursor: pointer;
+        
+        fill: currentColor;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
+.close:hover{
+        color: #2196F3;
+        fill: currentColor;
 
-}       
+}      
 /*Peculiarities secyion*/
 .subtitle{
         
