--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ textarea{
         
 
         
-        border: 1px solid var(--main-secon-color);
+        border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         fill: currentColor;
@@ -349,24 +349,47 @@ textarea{
 .form-input-checkbox{
         -moz-appearance: none;
         position: absolute;
+        
 }
 .form-field-checkbox{
-        display: block;
-        text-align: left;
+        display: flex;
+
         
         height: 24px;
         margin-top: 20px;
+        
+         
         align-items: center;
-        text-align: center;
+   
+}
+.icon-checkbox{
+        display:inline-block;
+        width: 16px;
+        height: 15px;
+
+        margin-right: 8px;
+        border: 2px solid #212121;
+        border-radius: 2px;
+        transform: translateY(25%);
+        
+
         
 }
 .form-label-checkbox{
         font-size: 14px;
         line-height: 24px;
+        margin-left: 8px;
                
         letter-spacing: 0.03em;
         
         color: #757575;
+}
+.form-input-checkbox:checked ~ .icon-checkbox{
+        border-color: #2196F3;
+        background-color: #2196F3;
+        background-image:url('../img/images/vektor.svg');
+        background-size: contain;
+        background-origin: border-box;
 }
 
 .terms{
