--- a/css/styles.css
+++ b/css/styles.css
@@ -364,16 +364,17 @@ textarea{
 }
 .icon-checkbox{
         display:inline-block;
+        position: relative;
         width: 16px;
         height: 15px;
+        top: 0;
+        left: 0;
 
         margin-right: 8px;
         border: 2px solid #212121;
         border-radius: 2px;
-        
-        
-
-        
+        transform: translateY(15%);
+               
 }
 .form-label-checkbox{
         font-size: 14px;
@@ -390,6 +391,7 @@ textarea{
         background-image:url('../img/images/vektor.svg');
         background-size: contain;
         background-origin: border-box;
+        
         
 }
 
@@ -484,8 +486,6 @@ textarea{
 .subtitle-contanier li{
         justify-content: flex-start;
 }
-
-
 .text{
         font-weight: 400;
         font-size: 14px;
@@ -665,8 +665,6 @@ textarea{
         align-items: baseline;
 
 }
-
-
 .footer-social {
         display: flex;
         display: block;
@@ -715,6 +713,66 @@ textarea{
         color: #FFFFFF;
         fill: currentColor;
 
+}
+.form-field-list{
+        
+        display: block;
+        align-items: baseline;
+        
+        height: 50px;
+        margin-left: auto;      
+}
+.form-label-list{
+        display: flex;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        
+        color: #FFFFFF;
+}
+.form-input-list{
+        
+        width: 358px;
+        height: 50px;
+        margin-top: 20px;        
+        background-color: #2F303A;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+}
+.form-input-list::placeholder{
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        padding-top: 15px;
+        padding-left: 16px;
+        
+        
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.03em;
+        
+        color: rgba(255, 255, 255, 0.6);
+}
+.button-list{
+        width: 200px;
+        height: 50px;
+
+        background: #2196F3;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 30px;
+
+        text-align: center;
+        letter-spacing: 0.06em;
+        
+        color: #FFFFFF;
+        background-image: url('../img/images/icon-send.svg');
 }
 /*portfolio*/
 
