--- a/css/styles.css
+++ b/css/styles.css
@@ -425,6 +425,7 @@ textarea{
          
         letter-spacing: 0.06em;
         color: #FFFFFF;
+        cursor: pointer;
 }
 .close{
         display: flex;
@@ -757,9 +758,11 @@ textarea{
         color: rgba(255, 255, 255, 0.6);
 }
 .button-list{
+        display:inline-block;
+        align-items: center;
         width: 200px;
         height: 50px;
-
+        
         background: #2196F3;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
@@ -772,8 +775,25 @@ textarea{
         letter-spacing: 0.06em;
         
         color: #FFFFFF;
-        background-image: url('../img/images/icon-send.svg');
+        text-decoration: none;
+        cursor: pointer;
+        
+
+        
+
 }
+.button-list::after{
+        display: inline-block;
+        content:"";
+        width: 24px;
+        height: 24px;
+        margin-left: 10px;
+        background-image: url('../img/images/icon-send.svg');
+        background-size: contain;
+        
+
+}
+
 /*portfolio*/
 
 .btn-portfolio{
