--- a/css/styles.css
+++ b/css/styles.css
@@ -390,17 +390,12 @@ textarea{
         background-color: #2196F3;
         background-image:url('../img/images/vektor.svg');
         background-size: contain;
-        background-origin: border-box;
-        
-        
+        background-origin: border-box;        
 }
-
 .terms{
         text-decoration:underline;
         color:#2196F3 ;
 }
-
-
 .font-field input::placeholder{
         
         font-weight: 400;
@@ -690,11 +685,9 @@ textarea{
         gap: 10px;
         color: #FFFFFF;
 }
-
 .social-icons {
         fill: currentColor;
 }
-
 .social-links {
         display: flex;
         justify-content: center;
@@ -716,7 +709,6 @@ textarea{
 
 }
 .form-field-list{
-        
         display: block;
         align-items: baseline;
         
@@ -742,14 +734,13 @@ textarea{
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
+        padding-left: 16px;
+        margin-right: 10px;
 }
 .form-input-list::placeholder{
         font-weight: 400;
         font-size: 16px;
         line-height: 20px;
-        padding-top: 15px;
-        padding-left: 16px;
-        
         
         display: flex;
         align-items: center;
@@ -758,7 +749,7 @@ textarea{
         color: rgba(255, 255, 255, 0.6);
 }
 .button-list{
-        display:inline-block;
+        display:inline-flex;
         align-items: center;
         width: 200px;
         height: 50px;
@@ -777,25 +768,18 @@ textarea{
         color: #FFFFFF;
         text-decoration: none;
         cursor: pointer;
-        
-
-        
-
+        padding-left: 29px;
 }
 .button-list::after{
-        display: inline-block;
         content:"";
         width: 24px;
         height: 24px;
         margin-left: 10px;
         background-image: url('../img/images/icon-send.svg');
         background-size: contain;
-        
-
 }
 
 /*portfolio*/
-
 .btn-portfolio{
         display: flex;
         justify-content: center;
@@ -803,15 +787,10 @@ textarea{
         padding-left: 0px;        
 }
 /*filters*/
-.filters{
-        
+.filters{        
         align-items: flex-start;
         border-radius: 4px;      
 }
-.btn-portfolio li:first-child{
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);        
-}
-
 .btn{
         padding: 6px 22px 6px 22px;
         
@@ -873,6 +852,7 @@ textarea{
 .button:hover, .button:focus, .button-order:hover, .button-order:focus{
         background: #2196F3;
         color: #FFFFFF;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /*images portfolio*/
 .img-container{
