--- a/css/styles.css
+++ b/css/styles.css
@@ -352,7 +352,7 @@ textarea{
         
 }
 .form-field-checkbox{
-        display: flex;
+        display: inline-flex;
 
         
         height: 24px;
@@ -363,7 +363,7 @@ textarea{
    
 }
 .icon-checkbox{
-        display:inline-block;
+        display:inline-flex;
         position: relative;
         width: 16px;
         height: 15px;
@@ -379,7 +379,7 @@ textarea{
 .form-label-checkbox{
         font-size: 14px;
         line-height: 24px;
-        margin-left: 8px;
+        
                
         letter-spacing: 0.03em;
         
@@ -390,7 +390,8 @@ textarea{
         background-color: #2196F3;
         background-image:url('../img/images/vektor.svg');
         background-size: contain;
-        background-origin: border-box;        
+        background-origin: border-box;  
+        background-position: center;      
 }
 .terms{
         text-decoration:underline;
