--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,7 @@ ul{
         height: 100%;
         background: rgba(0, 0, 0, 0.2);
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        z-index: 5;
 
 }
 .backdrop.is-hidden{
@@ -268,6 +269,7 @@ ul{
         line-height: 23px;
         text-align: center;
         letter-spacing: 0.03em;
+        padding-bottom: 12px;
         
         
         color: #212121;
@@ -277,7 +279,7 @@ textarea{
 }
 .form{
         
-        padding: 40px;
+        padding:40px;
 }
 .form-field{
         display: block;
@@ -322,8 +324,8 @@ textarea{
         width: 100%;
         
         
-        padding-top: 14px;
-        padding-bottom: 14px;
+        padding-top: 10px;
+        padding-bottom: 10px;
         padding-left:42px ;
         
 
@@ -348,7 +350,10 @@ textarea{
 }
 .form-input-checkbox{
         -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
         position: absolute;
+        
         
 }
 .form-field-checkbox{
@@ -418,12 +423,14 @@ textarea{
         letter-spacing: 0.06em;
         color: #FFFFFF;
         cursor: pointer;
+        border: none;
 }
 .close{
         display: flex;
         align-items: center;
         justify-content: center;
         position: absolute;
+
         top: 8px;
         right: 8px;
         position: absolute;
@@ -754,6 +761,7 @@ textarea{
         background: #2196F3;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
+        border: none;
 
         font-weight: 700;
         font-size: 16px;
