--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,8 @@ textarea{
         outline: none;
         padding: 12px 16px;
         border: 1px solid rgba(33, 33, 33, 0.2);
-        border-radius: 4px;      
+        border-radius: 4px; 
+        margin-top: 4px;     
 }
 .form-field-coment{
         margin-bottom: 0;
